--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,9 @@ extends ./layout.pug
 block content
  h1 Does My Pet Need An Umbrella?
  h3 Select a pet to find out
+ each pet in pets
+  div.pet-container
+   = pet.name
+   = pet.pet_type
+   = pet.breed
+   a(href="") view
