--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,8 @@ extends ./layout.pug
 
 block content
  h1 Does My Pet Need An Umbrella?
- h3 Select a pet to find out
+ h3 Select a pet to find out or 
+  a(href='new') add your pet
  each pet in pets
   div.pet-container
    = pet.name
