--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
  h3 Select a pet to find out or 
   a(href='new') add your pet
  each pet in pets
-  div.pet-container
+  div
    = pet.name
    = pet.pet_type
    = pet.breed
