--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,6 @@
 doctype html
 head
  title Pet Weather
- link(rel='stylsheet', href='css/styles.css')
+ link(rel='stylesheet', href='/css/styles.css')
 body
  block content
