--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,6 @@ h1, h2, h3 {
 	display: table;
     width: 100%;
     border: 2px solid #999999;
-    border-right: 0px;
 }
 .petTableRow {
 	display: table-row;
@@ -22,9 +21,12 @@ h1, h2, h3 {
 	display: table-header-group;
 }
 .petTableCell, .petTableHead {
-    border-right: 2px solid black;
+    border-right: 2px solid #999999;
 	display: table-cell;
 	padding: 3px 10px;
+}
+.petEndCell {
+	border-right:
 }
 .petTableHead {
     background-color: #DDD;
