--- a/views/pet.pug
+++ b/views/pet.pug
@@ -14,4 +14,4 @@ block content
    h1 No!
  h3 #{pet.name} is #{desc} going to need an umbrella in #{pet.location}.
  br
- a(href="/") Lookup a different pet
+ a(href='/' class='aCenter') Lookup a different pet
