Use div to center header elements

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,10 @@ extends ./layout.pug
 
 block content
   div(class='mainContainer')
-    h1 Does My Pet Need An Umbrella?
-    h3 Select a pet to find out or 
-      a(href='new') add your pet
+    div(class='divTCenter')
+      h1 Does My Pet Need An Umbrella?
+      h3 Select a pet to find out or 
+        a(href='new') add your pet
     div(class='petTable')
       div(class='petTableBody')
         div(class='petTableRow')
