--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
-h1, h2, h3 {
-    text-align: center;
-}
 .mainContainer {
     width: 95%;
     margin: 0 auto;
@@ -50,4 +47,7 @@ h1, h2, h3 {
 }
 .aCenter {
 	display:block;text-align:center;
+}
+.divTCenter {
+    text-align: center;
 }
