--- a/views/pet.pug
+++ b/views/pet.pug
@@ -1,17 +1,18 @@
 extends ./layout.pug
 
 block content
- h3
-  = location
- h3= cc.HasPrecipitation
-   = cc.PrecipitationType
-   = cc.WeatherText
- - var desc = '' 
- if cc.HasPrecipitation && (cc.PrecipitationType == 'Rain' || cc.PrecipitationType == 'Mixed')
-   h1 Yes!
- else
-   - desc = 'NOT'
-   h1 No!
- h3 #{pet.name} is #{desc} going to need an umbrella in #{pet.location}.
+ div(class='divTCenter')
+  h3
+   = location
+  h3= cc.HasPrecipitation
+    = cc.PrecipitationType
+    = cc.WeatherText
+  - var desc = '' 
+  if cc.HasPrecipitation && (cc.PrecipitationType == 'Rain' || cc.PrecipitationType == 'Mixed')
+    h1 Yes!
+  else
+    - desc = 'NOT'
+    h1 No!
+  h3 #{pet.name} is #{desc} going to need an umbrella in #{pet.location}.
  br
  a(href='/' class='aCenter') Lookup a different pet
