--- a/views/new.pug
+++ b/views/new.pug
@@ -22,4 +22,9 @@ block content
    label(for='longitude') Longitude:
    input(type='text', id='longitude', name='longitude')
    br
-   button(class='sButton') Add Pet
+   br
+   br
+   div(class='sButton')
+    button Add Pet
+    |&nbsp;&nbsp;
+    input(type="button", name="cancel", value="Cancel", onClick="window.location.href='/';")
