--- a/views/error.pug
+++ b/views/error.pug
@@ -1,11 +1,12 @@
 extends ./layout.pug
 
 block content
-  h1 Error
-  if err.code
-    h3 Code: #{err.code}
-    h3 Message: #{err.message}
-  else
-    h3 Code: #{err.Code}
-    h3 Message: #{err.Message}
-  a(href="/") Home
+  div(class='divTCenter')
+    h1 Error
+    if err.code
+      h3 Code: #{err.code}
+      h3 Message: #{err.message}
+    else
+      h3 Code: #{err.Code}
+      h3 Message: #{err.Message}
+    a(href="/") Home
